# new-school-sdk

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  new-api.md  pyproject.toml  requirement.txt  setup.py  zf-pag-setup.py  zf-setup.py
.github/workflows/: ci.yml
docs/: index.md
docs/快速开始/: index.md  school_args.md
docs/接口方法/: get_info.md  get_schedule.md  get_score.md  index.md  others.md  user_login.md  登录方法.md
examples/: base_sample.py  captcha_examples.py  config.py  cookie_login_example.py  dev_example.py  proxy_request_examples.py
school_api/: __init__.py  config.py
school_api/PyRsa/: pyrng.py  pyrsa.py  tools.py
school_api/client/: __init__.py  exceptions.py
school_api/client/api/: __init__.py  login.py
school_sdk/: __init__.py  config.py  type.py  utils.py
school_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
school_sdk/PyRsa/: __init__.py  pyjsbn.py
school_sdk/check_code/: __init__.py  captcha_setting.py  dataset.py  model.py  predict.py  type.py
school_sdk/client/: __init__.py  base.py  exceptions.py  settings.py  utils.py
school_sdk/client/api/: __init__.py  check.py  class_schedule.py  login.py  schedule_parse.py  schedules.py  score.py  user_info.py
school_sdk/session/: __init__.py
search/: search_index.json
test/: test.py
快速开始/: index.html
快速开始/school_args/: index.html
接口方法/: index.html
接口方法/get_info/: index.html
接口方法/get_schedule/: index.html
接口方法/get_score/: index.html
接口方法/others/: index.html
接口方法/user_login/: index.html
